k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-backend
  namespace: farhad
spec:
  selector:
    app: chat-backend
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
      nodePort: 30301
  type: NodePort
