k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-frontend
  namespace: farhad
spec:
  selector:
    app: chat-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
  type: NodePort
